<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/storage_background"
    tools:context=".StorageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="52dp">


        <org.eazegraph.lib.charts.PieChart
            android:id="@+id/storage_chart"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:padding="6dp"
            android:layout_marginTop="75dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

        <TextView
            android:id="@+id/total_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:text="@string/total_storage"/>

        <TextView
            android:id="@+id/total_storage_editable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:text="8gb"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/available_storage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:text="@string/available_storage" />
        <TextView
            android:id="@+id/available_storage_editable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:text="5.2gb"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/button_check_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_button"
            android:padding="8dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:text="@string/manage_storage"/>

    </LinearLayout>
</FrameLayout>